// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutLeadBlock tests should not render if no awardsAndCertificates assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.specification
        </h5>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-37 MuiButton-outlined MuiButton-outlinedPrimary"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-40"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      data-testid="sidebar"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ColorPair ColorPair--pearl"
        >
          <div
            class="PostItCard"
          >
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                Key Features
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Sample KF value
                      </p>
                    </div>
                  </li>
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Sample KF value 2
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Benefit 3 NO, Benefit 4 NO
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no guaranteesAndWarranties assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Test_Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h90/h39/9012208238622/Test-Awardpng"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.specification
        </h5>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-19 MuiButton-outlined MuiButton-outlinedPrimary"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-22"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      data-testid="sidebar"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ColorPair ColorPair--pearl"
        >
          <div
            class="PostItCard"
          >
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                Key Features
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Sample KF value
                      </p>
                    </div>
                  </li>
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Sample KF value 2
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Benefit 3 NO, Benefit 4 NO
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Test_Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h90/h39/9012208238622/Test-Awardpng"
        />
      </div>
    </div>
    <div
      data-testid="sidebar"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ColorPair ColorPair--pearl"
        >
          <div
            class="PostItCard"
          >
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Benefit 3 NO, Benefit 4 NO
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Test_Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h90/h39/9012208238622/Test-Awardpng"
        />
      </div>
    </div>
    <div
      data-testid="sidebar"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ColorPair ColorPair--pearl"
        >
          <div
            class="PostItCard"
          >
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography MuiTypography-h4"
              >
                siderBarItem
              </h4>
              <div
                class="content"
              >
                <div
                  class="RichText"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no siderbar, keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no specification asset 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Test_Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h90/h39/9012208238622/Test-Awardpng"
        />
      </div>
    </div>
    <div
      data-testid="sidebar"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ColorPair ColorPair--pearl"
        >
          <div
            class="PostItCard"
          >
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Benefit 3 NO, Benefit 4 NO
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Test_Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h90/h39/9012208238622/Test-Awardpng"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should render 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          longDescription
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Test_Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h90/h39/9012208238622/Test-Awardpng"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.specification
        </h5>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      data-testid="sidebar"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ColorPair ColorPair--pearl"
        >
          <div
            class="PostItCard"
          >
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                Key Features
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Sample KF value
                      </p>
                    </div>
                  </li>
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Sample KF value 2
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
              <div
                class="content"
              >
                <ul
                  class="IconList"
                >
                  <li
                    class="ListItem ListItem--isCompact"
                  >
                    <div
                      class="icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root blueCheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                    </div>
                    <div
                      class="content"
                    >
                      <p
                        class="MuiTypography-root title Typography MuiTypography-body1"
                      >
                        Benefit 3 NO, Benefit 4 NO
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="section"
            >
              <h4
                class="MuiTypography-root Typography MuiTypography-h4"
              >
                siderBarItem
              </h4>
              <div
                class="content"
              >
                <div
                  class="RichText"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests specification section move up if no guaranteesAndWarranties and awardsAndCertificates assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          longDescription
        </div>
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.specification
        </h5>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-73 MuiButton-outlined MuiButton-outlinedPrimary"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-76"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
